[package]
name = "rust-pi-os"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Platform specefic dependencies
cortex-a = { version = "6.x.x" }

[profile.release]
lto = true

[[bin]]
name = "kernel"
path = "src/main.rs"